flux/apps/lingarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lingarr
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lingarr
  template:
    metadata:
      labels:
        app: lingarr
    spec:
      containers:
        - name: lingarr
          image: ghcr.io/lingarr-translate/lingarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9876
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: media
              mountPath: /data/media/movies
              subPath: movies
            - name: media
              mountPath: /data/media/tv
              subPath: tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lingarr-config
        - name: media
          persistentVolumeClaim:
            claimName: lingarr-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lingarr-db
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lingarr-db
  template:
    metadata:
      labels:
        app: lingarr-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: lingarr-db
