flux/apps/lingarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingarr
  namespace: multimedia-factory
spec: 
  type: ClusterIP
  ports:
    - port: 9876
      targetPort: 9876
  selector:
    app: lingarr
