flux/apps/lingarr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: lingarr
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:AN8aoNxQyaWNHyW2F0vET/+GFJ7nvn/mWLWG5Sg=,iv:XXAFuVj6Z2wFbDdmzVW7eKGBFLNMjueWgQ/N4dmU9vE=,tag:DtwVNrclrdyU97B3Zd/wZQ==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: lingarr
              port: 9876
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4UVdpVnBNNllVNkVJNExG
[...]
            ObyxhC6wcnE2ZkMAMo1X6RKrkLP7zVngiOEOSPnVCNJ0yGX5+c0O/Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-30T22:33:44Z"
    mac: ENC[AES256_GCM,data:5U8sWZPjZvVLYzp0QRdnusMTZApRVVmG9czm+mDtim1Ot03NnHwg5eLl4uNE+Lfh6su5KFvVQFjkvHEBC73ixA/uo4CqlHTP8XxpQK7YWJs1fImK0ctRjOU3B0yMpMUE7UhGYuckUCI6dV5UAFl8NTlSaBFok6CMgbPyiZ49NEg=,iv:jPpeppsfx/HmEkOpRLAyha8ZxMT8jte0Rlk2IwAhgUM=,tag:08uZIKDDh8vJXLTA7EZP4A==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
